[package]
name = "audio_tool"
version = "0.1.0"
edition = "2021"
description = "get audio duration simple tool"
license = "MIT"
repository = "https://github.com/mdddj/audio_tool"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
rodio = "0.20.1"
serde = {version = "1.0.216",features = ["derive"]}
